--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -17,6 +17,7 @@
                 <td>first name</td>
                 <td>last name</td>
                 <td>email</td>
+                <td>role</td>
                 <td>birthDate</td>
                 <td>enabled</td>
                 <td>actions</td>
@@ -28,6 +29,7 @@
                 <td th:text="*{first_name}"></td>
                 <td th:text="*{last_name}"></td>
                 <td th:text="*{email}"></td>
+                <td th:text="*{role}"></td>
                 <td th:text="*{birthDate}"></td>
                 <td th:text="*{enabled}"></td>
 
