--- a/src/main/resources/templates/user/create-user.html
+++ b/src/main/resources/templates/user/create-user.html
@@ -5,6 +5,7 @@
     <title>Formulaire Utilisateur</title>
 </head>
 <body>
+<th:block th:replace="~{ /fragment/fragments :: header }"></th:block>
 <h1>Formulaire Utilisateur</h1>
 <form th:object="${formulaire}" th:action="@{/user/create-user}" method="post">
     <div>
@@ -92,5 +93,6 @@
         <button type="submit">Valider</button>
     </div>
 </form>
+<th:block th:replace="~{ /fragment/fragments :: footer }"></th:block>
 </body>
 </html>
