added reservations menu button

--- a/src/main/resources/templates/fragment/fragments.html
+++ b/src/main/resources/templates/fragment/fragments.html
@@ -88,6 +88,13 @@
                     <button onclick="window.location.href='http://localhost:8080/address/addresses'">See addresses</button>
                 </div>
             </div>
+            <div class="dropdown">
+                <button>Reservations</button>
+                <div class="dropdown-content">
+                    <button onclick="window.location.href='http://localhost:8080/reservation/create-reservation'">Create a reservation</button>
+                    <button onclick="window.location.href='http://localhost:8080/reservation/reservations'">See reservations</button>
+                </div>
+            </div>
         </nav>
     </header>    
 </th:block>
